<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:title="@string/pref_title_display_name"
        android:capitalize="words"
        android:defaultValue="@string/pref_location_default"
        android:inputType="textCapWords"
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true" />


    <ListPreference
        android:title="@string/pref_type_name"
        android:key="@string/pref_type_key"
        android:defaultValue="@string/pref_type_default"
        android:entryValues="@array/pref_list_type_value"
        android:entries="@array/pref_list_type_entries" />


</PreferenceScreen>
